--- a/Data Structure/Sequence List/Sequence List.vcxproj.filters
+++ b/Data Structure/Sequence List/Sequence List.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="Question1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Question2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
